<resources>
    <string name="app_name">Calculator</string>
    <string name="version" translatable="false">Version 1.0.0</string>
    <string name="invalid_message">Invalid Value Entered</string>
    <string name="add_image">Add Image</string>
    <string name="add_audio">Add Audio</string>
    <string name="add_video">Add Video</string>
    <string name="add_files">Add Files</string>
    <string name="share">Share</string>
    <string name="file_options">File Options</string>
    <string name="rename_file">Rename File</string>
    <string name="share_file">Share File</string>
    <string name="add_document">Add Document</string>
    <string name="failed_to_hide_audio">Failed to hide Audios</string>
    <string name="failed_to_hide_documents">Failed to hide Documents</string>
    <string name="no_files_selected">No files selected</string>
    <string name="documents_hidden_successfully"> Files hidden successfully</string>
    <string name="failed_to_hide_unhide_photo">Failed to hide/unhide photo</string>
    <string name="images_hidden_successfully"> Images hidden successfully</string>
    <string name="failed_to_hide_images">Failed to hide images</string>
    <string name="failed_to_hide_files">Failed to hide files</string>
    <string name="storage_permissions_granted">Storage permissions granted</string>
    <string name="storage_permissions_denied">Storage permissions denied</string>
    <string name="preview_images">Preview Images</string>
    <string name="preview_videos">Preview Videos</string>
    <string name="preview_audios">Preview Audios</string>
    <string name="preview_documents">Preview Documents</string>
    <string name="delete_file">Delete File!</string>
    <string name="are_you_sure_to_delete_this_file_permanently">Are you sure to Delete this file permanently?</string>
    <string name="delete_permanently">Delete Permanently</string>
    <string name="cancel">Cancel</string>
    <string name="un_hide_file">Un-hide File</string>
    <string name="are_you_sure_you_want_to_un_hide_this_file">Are you sure you want to Un-hide this file?</string>
    <string name="un_hide">Un-hide</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_security_question">Enter security question</string>
    <string name="enter_security_answer">Enter security answer</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
    <string name="password_set_successfully">Password set successfully</string>
    <string name="security_question_not_set_yet">Security question not set yet.</string>
    <string name="this_field_can_t_be_empty">This field can\'t be empty</string>
    <string name="password_reset_successfully">Password reset successfully</string>
    <string name="old_password_and_new_password_not_be_same">Old Password And New Password Not Be Same</string>
    <string name="wrong_password_entered">Wrong password entered</string>
    <string name="old_password_not_matching">Old Password Not Matching</string>
    <string name="answer_the_security_question">Answer the Security Question!</string>
    <string name="verify">Verify</string>
    <string name="answer_cannot_be_empty">Answer cannot be empty!</string>
    <string name="password_successfully_reset">Password successfully reset.</string>
    <string name="invalid_answer">Invalid answer!</string>
    <string name="videos_hidden_successfully"> Videos hidden successfully</string>
    <string name="failed_to_hide_videos">Failed to hide videos</string>
    <string name="image">IMAGE</string>
    <string name="video">VIDEO</string>
    <string name="audio">AUDIO</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="delete_folder">Delete Folder</string>
    <string name="rename">Rename</string>
    <string name="cannot_delete_folder">Cannot Delete Folder</string>
    <string name="document">DOCUMENT</string>
    <string name="no_audio_player_found">No audio player found!</string>
    <string name="no_suitable_app_found_to_open_this_document">No suitable app found to open this document!</string>
    <string name="unknown_file">Unknown File</string>
    <string name="details"> DETAILS</string>
    <string name="audio_hidded_successfully">Audios hidden successfully</string>
    <string name="no_items_available_add_one_by_clicking_on_the_plus_button">No Files Available, Add one by clicking on the \'+\' button</string>
    <string name="now_enter_button">Now Enter \'=\' button</string>
    <string name="enter_123456">Enter 123456</string>
    <string name="create_folder">Create Folder</string>
    <string name="enter_folder_name">Enter folder name</string>
    <string name="folder_already_exists">Folder already exists</string>
    <string name="folder_options">Folder Options</string>
    <string name="rename_folder">Rename Folder</string>
    <string name="enter_new_folder_name">Enter new folder name</string>
    <string name="failed_to_create_folder">Failed to create folder</string>
    <string name="are_you_sure_you_want_to_delete_this_folder">Are you sure you want to delete this folder?</string>
    <string name="yes">Yes</string>
    <string name="error_loading_files">Error loading files</string>
    <string name="delete_items">Delete Folder</string>
    <string name="are_you_sure_you_want_to_delete_selected_items">Are you sure you want to delete selected Folders?</string>
    <string name="folder_will_be_deleted_permanently">Note: If you delete the folder(S) all the files available inside the folder will be deleted !</string>
    <string name="items_deleted_successfully">Items deleted successfully</string>
    <string name="folder_deleted_successfully">Folder deleted successfully</string>
    <string name="some_items_could_not_be_deleted">Some items could not be deleted</string>
    <string name="hidden_space">Hidden Space</string>
    <string name="there_was_a_problem_in_the_folder">There was a problem in the Folder</string>
    <string name="hiding_files">Hiding Files</string>
    <string name="file_unhidden_successfully">File Will Now Show In Gallery</string>
    <string name="file_unhidden_but_failed_to_remove_from_hidden_folder">File unhidden but failed to remove from hidden folder</string>
    <string name="failed_to_unhidden_file">Failed to unhidden file</string>
    <string name="failed_to_create_uri_for_file">Failed to create URI for file</string>
    <string name="error_unhiding_file">Error unhiding file: %1$s</string>
    <string name="select_multiple">Select Multiple</string>
    <string name="settings">Settings</string>
    <string name="inaxdeveoper">INAxDeveloper</string>
    <string name="dynamic_theme">Dynamic Theme</string>
    <string name="theme_mode">Theme Mode</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System Default</string>
    <string name="full_app_name">Calculator Hide Files</string>
    <string name="developer_details">Developer Details</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="files_deleted_successfully">Files deleted successfully</string>
    <string name="some_files_could_not_be_deleted">Some files could not be deleted</string>
    <string name="un_hide_files">Unhide Files</string>
    <string name="are_you_sure_you_want_to_un_hide_selected_files">Are you sure you want to unhide the selected files?</string>
    <string name="files_unhidden_successfully">Files unhidden successfully</string>
    <string name="some_files_could_not_be_unhidden">Some files could not be unhidden</string>
    <string name="copy_to_another_folder">Copy</string>
    <string name="move_to_another_folder">Move</string>
    <string name="select_destination_folder">Select Destination Folder</string>
    <string name="no_folders_available">No other folders available</string>
    <string name="change_password">Change Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="preview_file">Preview File</string>
    <string name="show_file_names">Show File Names</string>
    <string name="app_settings">App Settings</string>
    <string name="restrict_screenshots_in_hidden_section">Restrict Screenshots in Hidden Section</string>
    <string name="security_settings">Security Settings</string>
    <string name="app_details">App Details</string>
    <string name="setup_password">Setup Password</string>
    <string name="security_question_for_password_reset">Security Question (For Password Reset)</string>
    <string name="security_answer">Security Answer</string>
    <string name="save_password">Save Password</string>
    <string name="there_is_no_folders_available_create_one_by_clicking_on_the_add_folder_button_showing_in_the_bottom">There is no Folders Available, create one by clicking on the \'Add Folder\' Button showing in the bottom.</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="to_ensure_the_app_works_properly_and_allows_you_to_easily_hide_or_un_hide_your_private_files_please_grant_storage_access_permission">To ensure the app works properly and allows you to easily hide or un-hide your private files, please grant storage access permission.\n</string>
    <string name="for_devices_running_android_11_or_higher_you_ll_need_to_grant_the_all_files_access_permission">For devices running Android 11 or higher, you\'ll need to grant the \'All Files Access\' permission.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="later">Later</string>
    <string name="storage_permission_is_required_for_the_app_to_function_properly">Storage permission is required for the app to function properly</string>
    <string name="you_can_grant_permission_later_from_settings">You can grant permission later from Settings</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="github_profile">https://inaxdeveloper.github.io/developerParesh/</string>
    <string name="calculator_hide_files">%1$s/calculator-hide-files</string>
    <string name="would_you_like_to_set_a_specific_theme_mode">Would you like to set a specific theme mode?</string>
    <string name="no">No</string>
    <string name="could_not_open_url">Could not open URL</string>
    <string name="files_copied_successfully">Files copied successfully</string>
    <string name="some_files_could_not_be_copied">Some files could not be copied</string>
    <string name="files_moved_successfully">Files moved successfully</string>
    <string name="some_files_could_not_be_moved">Some files could not be moved</string>
    <string name="ok">OK</string>
    <string name="if_you_turn_on_off_this_option_dynamic_theme_changes_will_be_visible_after_you_reopen_the_app">If you turn on/off this option, dynamic theme changes will be visible after you reopen the app.</string>
    <string name="attention">Attention!</string>
    <string name="are_you_sure_to_delete_selected_files_permanently">Are you sure to delete selected files permanently ?</string>
    <string name="encrypt_file_when_hiding">Encrypt File When Hiding</string>
    <string name="encrypt_file">Encrypt File</string>
    <string name="decrypt_file">Decrypt File</string>
    <string name="encrypt_files">Encrypt Files</string>
    <string name="decrypt_files">Decrypt Files</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="set_custom_encryption_key">Set Custom Encryption Key</string>
</resources>